# netdox

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  authentication.json  entrypoint.sh  get-ad.ps1  master.sh  netdox-linux.sh  netdox-win.cmd  netdox.ps1  pluginconf.yml  pyproject.toml  setup.py  sonar-project.properties  test.py
DNSME/: domainids.json  domainids.py  editdns.sh
ErrorCheck/: ans_missed.csv  ansible_check.py  count.py  kube_domains.py  missing_dnsme.py
Firewall/: binary.py  block_ips.txt  blocklist.py  graylog.py  ip.csv  iptools.py  log.json  log.txt  query.json  response.json  talos.py  test.py  update.py
Graylog/: block_ips.txt  graylog.py  ip.csv  query.json  response.json
Sources/: ad.xml  domains.xml  kube_pods-frag-template.xml  kube_worker-frag-template.xml  note.xml  prefixes.csv  prefixes.txt  template-dns.psml  template-domain.psml  template-ip.psml  template-ports.psml
TemplateSum/: template.xml  translate.py
TemplateSum/src/: host.psml  ip.psml  (+1 more)
cfg/: pluginconf.json  roles.json
docs/: ad_domains.py  ad_format.py  auth.py  binary.py  conf.py  config.rst  dns.xsl  dnsme_domains.py  dnsmereq.py  doc.cmd  get-ad.ps1  get-pods.ps1  get-workers.ps1  index.rst  ingress2pod.py  ipdocs.py  ipdocs_new.py  json2xml.py  kube_docs.xsl  kube_domains.py  main.py  plugins.rst  ports.py  refresh.rst  roles.rst  subdomains.py  webhooks.rst
fragments/: ansible_info.py  auth.py  auto_version.py  editnote.py  get-ingress.ps1  kube_info.py  main.py  nmap.py  ptr_info.py  push.py  push_aware.py  version.py
linktest/: linktools.py  package.json
netdoc/: __init__.py  ad_domains.py  apps.xsl  auth.py  deployments.xsl  dns.xsl  dnsme_domains.py  encode.ps1  get-ad.ps1  get-ingress.ps1  get-services.ps1  get-workers.ps1  ingress2pod.py  ipdocs.py  iptools.py  k8s_domains.py  linktools.py  main.py  secret_api.py  secret_auth.py  workers.xsl
netdox/: __init__.py  ad_api.py  ad_domains.py  ansible.py  apps.xsl  auth.py  aws.xsl  aws_inf.py  build.xml  cf_domains.py  cleanup.py  cli.py  clusters.xsl  crypto.py  crypto.sh  dns.xsl  dnsme_api.py  dnsme_domains.py  domains.xsl  domains.xslt  generate.py  get-ad.ps1  get-ingress.ps1  get-pods.ps1  get-services.ps1  hosts.xsl  icinga_inf.py  imports.xslt  ingress2pod.py  init.py  init.sh  ip_inf.py  ipdocs.py  ips.xsl  ips.xslt  iptools.py  k8s_domains.py  k8s_fetch.sh  k8s_inf.py  k8s_inf_new.py  (+35 more)
netdox-src/: Dockerfile  ad_domains.py  apps.xsl  clusters.xsl  generate.py  get-ad.ps1  ingress2pod.py  secret_api.py  workers.xsl
scripts/: entrypoint.sh  gendocs.ps1  gendocs.sh  update.ps1  update.sh
src/: soap.xml
tests/: conftest.py  fixtures.py  networkobjs.py  test_config.py  test_containers.py  test_dns.py  test_helpers.py  test_iptools.py  test_nodes.py  test_nwman.py  test_nwobjs.py  test_objs.py  test_psml.py  test_utils.py
(+304 files in other folders)
