[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.coverage.run]
source = ['netdox']
omit = [
    '*/netdox/cli.py',
    '*/netdox/refresh.py',
    '*/netdox/serve.py',
    '*/netdox/pageseeder.py',
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
    'def _.*',
    '@abstractmethod',
    '@property',
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39

[testenv]
deps = 
    pytest 
    pytest-cov
commands = pytest {posargs}
"""