[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ['tests']
log_cli = true
log_cli_level = "ERROR"

[tool.coverage.run]
source = ['netdox']
omit = [
    '*/netdox/plugins/*.py',
    '*/netdox/cli.py',
    '*/netdox/refresh.py',
    '*/netdox/pageseeder.py'
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'raise NotImplementedError',
    'def _.*',
    '@abstractmethod',
    '@property',
    'def from_pageseeder'
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39

[testenv]
deps = 
    pytest 
    pytest-cov
commands = pytest {posargs}
"""

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
ignore_missing_imports_per_module = true
namespace_packages = true

# Ignore all errors
[[tool.mypy.overrides]]
module = [
    'netdox.iptools'
]
ignore_errors = true